--- 2.1.36 2006/10/13

Implemented yaz_filepath_comp which splits a path into file path
components (required by Zebra 2.0.3+).

Change wording of YAZ license to the 'Revised BSD License'. YAZ has used a
BSD inspired license until now so this should not have any real impact on
anybody. See http://www.opensource.org/licenses/bsd-license.php

Fixed bug #687: Missing log lines.

Fixed bug #678: CQL to PQF translation does not preserve double-quote
escaping.

Fixed bug #689: SRU diagnostics to be added.

Implemented new ZOOM function, ZOOM_connection_is_idle, which checks
whether a connection is idle (no more work do do).

--- 2.1.34 2006/10/04

Change type of optval from long to int for invocation of setsockopt with
the SO_REUSEADDR option. Thanks to Ateeq A. Altaf, Talis.

Added support for specifying the max log file size for the Generic
Frontend Server. The size is given with option -r.

--- 2.1.32 2006/09/21

Fix problem introduced in YAZ 2.1.28 WRT unix sockets in the ZOOM code.

--- 2.1.30 2006/09/17

Fixes for getaddrinfo use, Bugs #655 + #660. These bugs were introduced
in YAZ 2.1.28.

Fixed bug in Generic Frontend Server that could cause a server to stop
accepting new connections. Bug only seen on dual CPU Windows 2003 server.

For the generic frontend server, the maximum record size is used as maximum
size of incoming packages (SRU + Z39.50). The value until was previously 
only used in Z39.50 Init negotiation and, later, in a session controlled
sizes of records returned. This is controlled using -k option. It can be
specified, per server, with element maximumrecordsize in YAZ' GFS XML config.

--- 2.1.28 2006/09/04

TCP/IP comstack uses getaddrinfo now to resolve names. It should be IPV6
friendly now.

Fixed bug #644: Using Non Reentrant gethostbyname causes SIGSEGV.

New option for yaz-marcdump -lpos=value which allows setting a portion
of MARC header to a certain value.

Fixes for MARC generation when encoded as MARC-8 (bug 642, 643).
