@@ -1,7 +1,7 @@
-## $Id: Makefile.am,v 1.32 2006-07-04 12:59:56 heikki Exp $
+## $Id: Makefile.am,v 1.33 2006-10-27 11:22:08 adam Exp $
 
 pkginclude_HEADERS= backend.h ccl.h cql.h comstack.h \
- diagbib1.h diagsrw.h sortspec.h log.h logrpn.h marcdisp.h \
+ diagbib1.h diagsrw.h diagsru_update.h sortspec.h log.h logrpn.h marcdisp.h \
  nfa.h nfaxml.h \
  nmem.h odr.h \
  oid.h options.h otherinfo.h pquery.h prt-ext.h querytowrbuf.h \
